--- a/apache_spark/thesis/einfuehrung.tex
+++ b/apache_spark/thesis/einfuehrung.tex
@@ -84,7 +84,7 @@ Der zweifellose De-facto-Standard in diesen Bereichen ist bereits seit einiger Z
 
 Anfang des 21. Jahrhunderts wurde das Bedürfnis für Möglichkeiten, sehr große Datenmengen effizient verarbeiten zu können, stetig größer. Nicht zuletzt durch die zu dieser Zeit exponentiell steigende Menge von Inhalten im World Wide Web und deren Indexierung durch Suchmaschinen wie Google. Davon motiviert wurde 2002 das Projekt \textit{Nutch} mit dem Ziel gestartet, ein geeignetes \textit{Such- und Crawlersystem} frei verfügbar zu machen. Die ersten Versuche skalierten sehr schlecht, bis Google 2003 die Funktionsweise ihres verteilten Dateisystem GFS (Google File System) veröffentlichte. Somit konnten die sehr großen Dateien, die durch die Indexierung entstanden, effizient auf verschiedene Knoten verteilt gespeichert werden und die Verwaltung dieser Knoten und Dateien aus dem eigentlichen Indexierungs- und Suchprozess ausgelagert werden. 
 
-Im Jahre 2004 publizierte Google den \textit{MapReduce-Algorithmus}, der unter anderem die Indexierungs- und Analysefunktionen parallelisieren, delegieren und sinnvoll bündeln kann. In Nutch wurden daraufhin sämtliche wichtige Algorithmen auf MapReduce umgestellt, nachdem zuvor auch GFS unter dem Namen NDFS (Nutch Distributed File System) integriert wurde. Die möglichen Anwendungsgebiete von Nutch waren damit auch weit über das reine Suchen und Indexieren von Webseiten hinaus gewachsen. 2006 wurde aus Nutch ein Unterprojekt mit dem Namen Hadoop ausgegliedert, das im Jahre 2008 zum \textit{Apache Top-Level-Projec}t ernannt wurde. Zu dieser Zeit nutzten bereits Firmen wie Yahoo!, Facebook oder die New York Times Hadoop. Ein exemplarischer Anwendungsfall bei der NY Times war, mit Hilfe der Hadoop-basierten EC2-Cloud von Amazon ca. vier Terabyte gescannter Archivdateien in PDF-Dateien umzuwandeln und dies in weniger als 24 Stunden auf 100 Knoten. Auch beim Sortieren von sehr großen Datenmengen stellten Hadoop-basierte Systeme nach und nach sämtliche Rekorde ein \citelit{tw13}. 
+Im Jahre 2004 publizierte Google den \textit{MapReduce-Algorithmus}, der unter anderem die Indexie-rungs- und Analysefunktionen parallelisieren, delegieren und sinnvoll bündeln kann. In Nutch wurden daraufhin sämtliche wichtige Algorithmen auf MapReduce umgestellt, nachdem zuvor auch GFS unter dem Namen NDFS (Nutch Distributed File System) integriert wurde. Die möglichen Anwendungsgebiete von Nutch waren damit auch weit über das reine Suchen und Indexieren von Webseiten hinaus gewachsen. 2006 wurde aus Nutch ein Unterprojekt mit dem Namen Hadoop ausgegliedert, das im Jahre 2008 zum \textit{Apache Top-Level-Projec}t ernannt wurde. Zu dieser Zeit nutzten bereits Firmen wie Yahoo!, Facebook oder die New York Times Hadoop. Ein exemplarischer Anwendungsfall bei der NY Times war, mit Hilfe der Hadoop-basierten EC2-Cloud von Amazon ca. vier Terabyte gescannter Archivdateien in PDF-Dateien umzuwandeln und dies in weniger als 24 Stunden auf 100 Knoten. Auch beim Sortieren von sehr großen Datenmengen stellten Hadoop-basierte Systeme nach und nach sämtliche Rekorde ein \citelit{tw13}. 
 
 Hadoop und Hadoop-basierte System gelten mittlerweile als Industriestandard für Big-Data-Analytics-Anwendungen. Jedoch ist Hadoop nicht für alle Anwendungsgebiete gleichermaßen geeignet. Aufgrund der Charakterisierung der Paradigmen für Big Data Analytics im Paper „Frontiers in Massive Data Analysis“ der National Academic Press \citelit{nrc13}, lassen sich die Einsatzgebiete und Schwächen für Hadoop ermitteln \citelit{va14}.
 
@@ -93,7 +93,7 @@ So lassen sich mit Hadoop einfachere statistische Aufgabenstellungen sehr gut um
 
 
 Für linear-algebraische Berechnungen (lineare Regression, Eigenwertproblem, Hauptkomponentenanalyse), generalisierte n-Körper-Probleme (mit einer Komplexität 
-von O(n²) oder O(n³)), Graphentheorie, Optimierungsprobleme (Verlust-, Kosten- oder Energiefunktionen, sowie  Integrations- und Ausrichtungsfunktionen ist \textit{Hadoop} nur in jeweils einfacher Problemausprägung einsetzbar. Auch für Interaktive Abfragen ist \textit{Hadoop} nur bedingt geeignet, da es ursprünglich für die \textit{Batch-Verarbeitung} entwickelt wurde.
+von O(n²) oder O(n³)), Graphentheorie, Optimierungsprobleme (Verlust-, Kosten- oder Energiefunktionen, sowie  Inte-grations- und Ausrichtungsfunktionen ist \textit{Hadoop} nur in jeweils einfacher Problemausprägung einsetzbar. Auch für Interaktive Abfragen ist \textit{Hadoop} nur bedingt geeignet, da es ursprünglich für die \textit{Batch-Verarbeitung} entwickelt wurde.
 
 Aus diesem Grund wurde am \textit{AMPLab} der University of California in Berkeley nach Alternativen geforscht, die auch für komplexe linear-algebraische Probleme, generalisierte n-Körper-Probleme und diverse Optimierungsprobleme geeignet sind. Das Ergebnis ist \textit{Spark}, mittlerweile \textit{Apache Top-Level-Projekt} und dazu geeignet, die Nachfolge von Hadoop als \textit{Big-Data-Analytics-Framework} anzutreten. 
 
