--- a/apache_spark/thesis/internetQuellen.bib
+++ b/apache_spark/thesis/internetQuellen.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-15 22:59:30 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-30 23:37:22 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{cite-key,
+	Author = {Jason Brownlee},
+	Date-Added = {2015-01-30 22:35:50 +0000},
+	Date-Modified = {2015-01-30 22:37:22 +0000},
+	Month = {11},
+	Title = {A Tour of Machine Learning Algorithms URL: \url {http://machinelearningmastery.com/a-tour-of-machine-learning-algorithms/}},
+	Year = {2013}}
 
 @misc{km11,
 	Author = {E. M. Mirkes},
