--- a/apache_spark/thesis/thesis.tex
+++ b/apache_spark/thesis/thesis.tex
@@ -196,6 +196,7 @@
 \input{einfuehrung.tex}
 \input{grundlagen.tex}
 \input{bdas.tex}
+\input{alternativen.tex}
 \input{funktionsweise.tex}
 \input{architektur.tex}
 \input{prototypen.tex}
