--- a/apache_spark/thesis/literaturVerzeichnis.bib
+++ b/apache_spark/thesis/literaturVerzeichnis.bib
@@ -1,12 +1,21 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Sascha Patrick Lorenz at 2015-01-30 22:27:02 +0100 
+%% Created for Sascha Patrick Lorenz at 2015-01-31 00:08:29 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{rml90,
+	Author = {Jude W. Shavlik, Thomas G. Dietterich},
+	Date-Added = {2015-01-30 22:43:04 +0000},
+	Date-Modified = {2015-01-30 22:45:45 +0000},
+	Edition = {1},
+	Publisher = {Morgan-Kaufman Publishers, Inc. },
+	Title = {Reading in Machine Learning},
+	Year = {1990}}
 
 @book{bro98,
 	Author = {Felix Brosius},
