--- a/apache_spark/thesis/bdas.tex
+++ b/apache_spark/thesis/bdas.tex
@@ -24,12 +24,12 @@ Der Einsatz des BDAS kann laut Vijay Agneeswaran \citelit{va14} dabei helfen, un
 Prinzipiell sind die in der Einführung in Kürze beschriebenen Einschränkungen von Hadoop und die damit verbundene Motivation für Spark auch die Motivation für den BDAS. 
 
 
-In Abbildung \ref{fig:BDAS1} wird eine Übersicht über die drei Hauptschichten des BDAS gezeigt. Rot dargestellt ist hier jeweils die von den AMPLabs empfohlene Implementierung.
+In Abbildung \ref{fig:BDAS1} wird eine Übersicht über die Hauptschichten des BDAS gezeigt, welche die jeweils von den AMPLabs empfohlene Implementierung zeigt.
 
 \begin{figure}[htb!]
 \centering
-\includegraphics[width=1.0\textwidth]{bilder/2_1_stack.png}
-\caption{Grobübersicht über den BDAS mit den drei Hauptschichten}
+\includegraphics[width=1.0\textwidth]{bilder/BDAS.png}
+\caption{Übersicht des BDAS mit den vom AMPLab empfohlenen Bibliotheken.}
 \label{fig:BDAS1}
 \end{figure}
  
