--- a/apache_spark/thesis/einfuehrung.tex
+++ b/apache_spark/thesis/einfuehrung.tex
@@ -11,7 +11,7 @@ Innerhalb vom BDAS etabliert sich langsam auch eine schnellere und flexiblere Al
 
 Im vierten Teil dieser Ausarbeitung wird Spark in der praktischen Anwendung gezeigt inklusive Installation und ersten kleineren Beispielen sowohl direkt in Spark, als auch aus darüber liegenden Schichten aus dem Stack. 
 
-\section{Was versteht man unter \textit{Big Data}?}
+\section{Was versteht man unter Big Data?}
 \label{section:was versteht man unter Big Data?}
 
 
@@ -32,7 +32,7 @@ Bei der Definition von \textit{Big Data} werden laut des BITKOM-Ratgebers zum Th
 
 Die sinnvolle Analyse dieser Daten kann Unternehmen oder anderen Organisationen wichtige Informationen z.B. über Marktentwicklungen, bestimmte Kundenbedürfnisse, Epedemie-Ausbreitungen oder andere wichtige Sachverhalte liefern. Diese Analyse inklusive der dazu verwendeten Werkzeuge wird allgemein \textit{Big Data Analytics} genannt. 
 
-\section{Ansätze für \textit{Big Data Analytics}}
+\section{Ansätze für Big Data Analytics}
 \label{section:ansaetze für Big Data Analytics}
 
 
