--- a/apache_spark/thesis/funktionsweise.tex
+++ b/apache_spark/thesis/funktionsweise.tex
@@ -46,7 +46,7 @@ Wenn ein SparkContext initialisiert wurde, installiert der Spark sogenannte \tex
 
 
   
-\section{Das Konzept der RDD}
+\section{Das Konzept der Resilient Distributed Datasets}
 \label{section:rdd}
 
 
@@ -76,7 +76,13 @@ Wie in Abbildung \ref{section:rdd} dargestellt, werden die Daten bei einer Verar
 \label{fig:sparkfunkt}
 \end{figure}
 
+\section{In-Memory-Computing mit Spark}
+\label{section:rdd}
 
+Bjsdfshdjlhslhfsajhlkjhas
+asdfhasdfjh
+asdlöfjhasdljfhagjskdjfaskdf
+jasöldkfjaöl
 
 
 
